[package]
name = "protoai-lua-communication-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "proto_ai"
crate-type = ["cdylib"]

[dependencies]
mlua = { version="0.10.3", features=["module", "async", "lua51"] }
tokio = { version="1.42.1", features=["full"] }
reqwest = { version="0.12.15", features=["stream", "json"] }
reqwest-eventsource = "0.6.0"
eventsource-stream = "0.2.3"
serde_json = "1.0.140"
serde = {version="1.0.219", features=["derive"]}
once_cell = "1.21.3"
futures-util = "0.3.31"
